--- a/render/index.html
+++ b/render/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<img src="logo.png" alt="logo">
+		<img src="../assets/logo.png" alt="logo">
 	</div>
 </body>
 <style> 
@@ -16,10 +16,11 @@
 		height: 100%;
 		margin: 0;
 		background-color: RGB(15, 16, 16);
+		font-family: 'Poppins', sans-serif;
 	}
 
 	img {
-		transform: rotate(-28deg); 
+		transform: rotate(-27.5deg); 
 		animation-name: spin;
 		animation-duration: 10s;
 		animation-iteration-count: infinite;
@@ -36,7 +37,7 @@
 
 	@keyframes spin { 
         from { 
-            transform: rotate(-25deg); 
+            transform: rotate(0deg); 
         } to { 
             transform: rotate(360deg); 
         }
