--- a/render/setup.html
+++ b/render/setup.html
@@ -16,7 +16,7 @@
 		<input id="add-btn" type="file" style="display: none;"/>
 	</div>
 	<div class="coolanim">
-		<a href="https://github.com/IMXNOOBX/aimware-loader-loader">
+		<a target="_blank" href="https://github.com/IMXNOOBX/aimware-loader-loader">
 			<img src="../assets/logo.png" alt="logo">
 		</a>
 	</div>
